Fixed Server-Client comms for rotation and movement, synced previous trail visual across all clients

--- a/MazeServer/server/client/index.html
+++ b/MazeServer/server/client/index.html
@@ -15,7 +15,7 @@
 <div><h3 id = "demotag">Demo Buttons</h3></div>
 <div id = "button-container">
   
-<button class = "button" onclick="moveBug(40, 40)">MoveBug</button>
+<button class = "button" onclick="moveBugRelative(40, 40)">MoveBug</button>
 <button class= "button" onclick = "rotateBugRelative(10)">Rotate Clockwise</button>
 <button class= "button" onclick = "rotateBugRelative(-10)">Rotate AntiClockwise</button>
 </div>
